# users-service/swagger-output.json
@@ -122,13 +122,7 @@
           "Search"
         ],
         "description": "",
-        "parameters": [
-          {
-            "name": "filter",
-            "in": "query",
-            "type": "string"
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
